# coolslides

./: .gitignore  Cargo.toml  README.md  UPDATE.md  dirgrab.txt  evaluation.md  package-lock.json  package.json  plan.md  specification.md  where_we_are_at.md
.claude/: settings.local.json
apps/cli/: Cargo.toml
apps/cli/src/: main.rs
apps/devserver/: Cargo.toml
apps/devserver/src/: export.rs  lib.rs  main.rs  rooms.rs
docs/: DEMO.md  capabilities.md  codeslide.md  math.md  transitions.md
examples/basic-deck/: slides.toml
examples/basic-deck/content/: features.slide.toml  intro.slide.toml  poll-demo.slide.toml  quote-example.slide.toml
examples/showcase/: README.md  slides.toml
examples/showcase/content/: code-git.slide.toml  intro.slide.toml  math-demo.slide.toml  poll-demo.slide.toml
examples/tmp-deck/: slides.toml
examples/tmp-deck-2/: importmap.json  slides.toml
examples/tmp-deck-2/content/: intro.slide.toml
examples/tmp-deck-2/themes/default/: print.css  tokens.css
examples/tmp-deck/content/: demo.slide.toml  intro.slide.toml
templates/vanilla-ce/: slides.toml
templates/vanilla-ce/content/: intro.slide.toml
themes/default/: theme.css
