[workspace]
members = [
    "apps/cli",
    "packages/coolslides_core",
    "apps/devserver",
]
resolver = "2"

[workspace.dependencies]
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
tokio = { version = "1.0", features = ["full"] }
clap = { version = "4.0", features = ["derive"] }
anyhow = "1.0"
thiserror = "1.0"
schemars = { version = "0.8", features = ["derive"] }
toml = "0.8"
axum = "0.7"
tower = "0.4"
tower-http = { version = "0.5", features = ["fs", "cors", "trace"] }
uuid = { version = "1.0", features = ["v4", "serde"] }